[gd_scene load_steps=34 format=3 uid="uid://dxy03obv86ulg"]

[ext_resource type="Script" uid="uid://ciyle86agvkbo" path="res://game_characters_scenes/allies/obstructer_ally/wooden_barrier/wooden_barrier.gd" id="1_07tll"]
[ext_resource type="Texture2D" uid="uid://5xg73u1xoy12" path="res://game_characters_scenes/shared_assets/circle_particle.png" id="5_gr23i"]
[ext_resource type="Texture2D" uid="uid://dhgs1rk8donhf" path="res://game_characters_scenes/allies/obstructer_ally/wooden_barrier/assets/w_barrier_level_1_b.png" id="6_gt6fc"]
[ext_resource type="Texture2D" uid="uid://cidh5l67h8gsk" path="res://game_characters_scenes/allies/obstructer_ally/wooden_barrier/assets/detroyed_particle.png" id="6_up2h6"]
[ext_resource type="Texture2D" uid="uid://qxpsb3mnc210" path="res://game_characters_scenes/allies/obstructer_ally/wooden_barrier/assets/w_barrier_level_1_c.png" id="7_5ehlj"]
[ext_resource type="Texture2D" uid="uid://b0cusm4uipcrk" path="res://game_characters_scenes/allies/obstructer_ally/wooden_barrier/assets/w_barrier_level_1_d.png" id="8_rcheb"]
[ext_resource type="Texture2D" uid="uid://b42npi53q6k3x" path="res://game_characters_scenes/allies/obstructer_ally/wooden_barrier/assets/w_barrier_level_1_a.png" id="9_sim7h"]
[ext_resource type="Texture2D" uid="uid://jdulueb7gowt" path="res://game_characters_scenes/shared_assets/dust_particle.png" id="13_6sfm6"]
[ext_resource type="Texture2D" uid="uid://b5ro46i71vfn0" path="res://screens/game/pop_ups/game_won_popup/assets/star_blink.png" id="17_ra0bs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rf0sk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_gt6fc")
}],
"loop": true,
"name": &"damaged_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_5ehlj")
}],
"loop": true,
"name": &"damaged_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_rcheb")
}],
"loop": true,
"name": &"damaged_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_sim7h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_gd2wd"]
_limits = [0.2, 0.8, 0.0, 1.0]
_data = [Vector2(0, 0.2), 0.0, 0.0, 0, 0, Vector2(0.502564, 0.781053), 0.35505, 0.35505, 0, 0, Vector2(1, 0.418947), -1.9579, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_cnql5"]
_data = [Vector2(0, 0.147368), 0.0, 0.0, 0, 0, Vector2(0.317949, 0.894737), 0.0, 0.0, 0, 0, Vector2(0.871795, 0.578947), -2.49886, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_d1rwd"]
_data = [Vector2(0, 0.147368), 0.0, 0.0, 0, 0, Vector2(0.467033, 0.515789), 0.0, 0.0, 0, 0, Vector2(0.983517, 0.115789), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_dtaoq"]
offsets = PackedFloat32Array(0, 0.324503, 1)
colors = PackedColorArray(0.351563, 0.351563, 0.351563, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_slnvn"]
_limits = [0.0, 0.1, 0.0, 1.0]
_data = [Vector2(0, 0.0175824), 0.0, 0.0, 0, 0, Vector2(0.505155, 0.1), 0.0163989, 0.0163989, 0, 0, Vector2(1, 0.00549448), -0.368232, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_dgc5m"]
offsets = PackedFloat32Array(0, 0.0783133, 0.379518, 0.572289, 0.76506, 1)
colors = PackedColorArray(0.874968, 0.604514, 0.563407, 0, 1, 1, 1, 1, 0.851918, 0.618979, 0.924945, 1, 0.954472, 0.794962, 0.466424, 1, 0.73367, 0.921388, 0.913637, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtqgl"]
size = Vector2(112, 171)

[sub_resource type="Animation" id="Animation_5ehlj"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrierTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BarrierTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 81)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BarrierTexture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bjuih"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrierTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BarrierTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4, 81), Vector2(-4, 87)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BarrierTexture/CrumbleParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DustParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_dclqj"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrierTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.992, 1.02)]
}

[sub_resource type="Animation" id="Animation_rcheb"]
resource_name = "receive_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BarrierTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BarrierTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.917647, 0.917647, 0.568627, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BarrierTexture/CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8enub"]
resource_name = "spawn"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpawnParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DustParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BarrierTexture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(0.98, 0.98), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BarrierTexture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(2, 2, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cp2sb"]
_data = {
&"RESET": SubResource("Animation_5ehlj"),
&"death": SubResource("Animation_bjuih"),
&"idle": SubResource("Animation_dclqj"),
&"receive_damage": SubResource("Animation_rcheb"),
&"spawn": SubResource("Animation_8enub")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_70gif"]
animation = &"receive_damage"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_ljcg0"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_07tll"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m6a0h"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1xlw6"]
animation = &"spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_70gif"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ljcg0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yqd0k"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_43hcq"]
states/death/node = SubResource("AnimationNodeAnimation_07tll")
states/death/position = Vector2(733, 100)
states/idle/node = SubResource("AnimationNodeAnimation_m6a0h")
states/idle/position = Vector2(475, 100)
states/spawn/node = SubResource("AnimationNodeAnimation_1xlw6")
states/spawn/position = Vector2(315, 100)
transitions = ["death", "End", SubResource("AnimationNodeStateMachineTransition_70gif"), "spawn", "idle", SubResource("AnimationNodeStateMachineTransition_ljcg0"), "Start", "spawn", SubResource("AnimationNodeStateMachineTransition_yqd0k")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_apw8h"]
graph_offset = Vector2(-73.8595, -69.1345)
nodes/Animation/node = SubResource("AnimationNodeAnimation_70gif")
nodes/Animation/position = Vector2(0, 240)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_ljcg0")
nodes/OneShot/position = Vector2(320, 40)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_43hcq")
nodes/StateMachine/position = Vector2(0, 40)
nodes/output/position = Vector2(580, 100)
node_connections = [&"OneShot", 0, &"StateMachine", &"OneShot", 1, &"Animation", &"output", 0, &"OneShot"]

[node name="WoodenBarrier" type="CharacterBody2D"]
position = Vector2(372, 915)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_07tll")
initial_hp = 10.0

[node name="TestDyingBtn" type="Button" parent="."]
offset_left = 317.0
offset_top = -255.0
offset_right = 585.0
offset_bottom = -178.0
theme_override_font_sizes/font_size = 50
text = "Test Death"

[node name="TestDamageButton" type="Button" parent="."]
offset_left = 309.0
offset_top = -373.0
offset_right = 630.0
offset_bottom = -296.0
theme_override_font_sizes/font_size = 50
text = "Test Damage"

[node name="BarrierTexture" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-4, 81)
sprite_frames = SubResource("SpriteFrames_rf0sk")
offset = Vector2(4, -81)

[node name="CPUParticles2D" type="CPUParticles2D" parent="BarrierTexture"]
position = Vector2(58, -104)
emitting = false
amount = 11
texture = ExtResource("5_gr23i")
lifetime = 0.3
one_shot = true
speed_scale = 2.44
explosiveness = 0.16
direction = Vector2(0, 1)
spread = 147.85
gravity = Vector2(0, 500)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
scale_amount_curve = SubResource("Curve_gd2wd")

[node name="CrumbleParticles" type="CPUParticles2D" parent="BarrierTexture"]
rotation = -2.34256
emitting = false
texture = ExtResource("6_up2h6")
lifetime = 0.4
one_shot = true
explosiveness = 0.2
direction = Vector2(0, 1)
spread = 108.43
gravity = Vector2(0, 10)
initial_velocity_min = 485.72
initial_velocity_max = 485.72
angular_velocity_min = -425.14
angular_velocity_max = 192.0
linear_accel_max = 19.05
scale_amount_curve = SubResource("Curve_cnql5")

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 100)
emitting = false
amount = 20
texture = ExtResource("13_6sfm6")
lifetime = 0.4
one_shot = true
speed_scale = 1.2
explosiveness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(60, 1)
direction = Vector2(0, -1)
spread = 55.84
gravity = Vector2(0, -60)
initial_velocity_min = 313.25
initial_velocity_max = 313.25
angular_velocity_min = 277.59
angular_velocity_max = 277.59
scale_amount_curve = SubResource("Curve_d1rwd")
color_ramp = SubResource("Gradient_dtaoq")

[node name="SpawnParticles" type="CPUParticles2D" parent="."]
position = Vector2(4, 71)
emitting = false
amount = 20
texture = ExtResource("17_ra0bs")
lifetime = 0.8
one_shot = true
explosiveness = 0.9
emission_shape = 3
emission_rect_extents = Vector2(70, 1)
direction = Vector2(0, -1)
spread = 75.99
gravity = Vector2(0, -100)
initial_velocity_min = 357.2
initial_velocity_max = 357.2
angular_velocity_min = 269.16
angular_velocity_max = 269.16
linear_accel_min = 31.78
linear_accel_max = 31.78
scale_amount_curve = SubResource("Curve_slnvn")
color_ramp = SubResource("Gradient_dgc5m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 9.5)
shape = SubResource("RectangleShape2D_mtqgl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cp2sb")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
callback_mode_discrete = 0
tree_root = SubResource("AnimationNodeBlendTree_apw8h")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0

[connection signal="pressed" from="TestDyingBtn" to="." method="_on_test_dying_btn_pressed"]
[connection signal="pressed" from="TestDamageButton" to="." method="_on_test_damage_button_pressed"]
